Create a user in `Dockerfile` to avoid running Docker container with root

--- a/system/docker/Dockerfile
+++ b/system/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:8.2.17-alpine3.19
 
+USER root
+
 # composer: PHP dependency library
 # ffmpeg: Video processing (optional)
 # tini: Tiny Docker init library
@@ -10,8 +12,12 @@ RUN apk add --no-cache zlib-dev libpng-dev libjpeg-turbo-dev libavif-dev curl-de
 RUN docker-php-ext-configure gd --with-jpeg --with-avif
 RUN docker-php-ext-install gd curl
 
-COPY ../.. /app/
+RUN adduser -D app
+
+COPY --chown=app:app ../.. /app/
 VOLUME /app/collection
+
+USER app
 
 RUN cd /app/module/Lipupini && composer install --no-interaction --no-dev --prefer-dist
 
