--- a/module/Monsi/webroot/.htaccess
+++ b/module/Monsi/webroot/.htaccess
@@ -1,4 +1,4 @@
-# For backwards-compatibility with v4
+# Backwards compatibility with v4 URLs
 RewriteRule ^@([a-z])(.+)$ /@/$1$2 [L,QSA,R=301]
 
 FallbackResource /index.php
