Add formalized cache busting
Track in the repo `system/config/state.example.php` and copy it to `system/config/state.php` (untracked) after composer install

--- a/module/Lipupini/composer.json
+++ b/module/Lipupini/composer.json
@@ -1,4 +1,9 @@
 {
+	"scripts": {
+		"post-install-cmd": [
+			"php -r \"copy('../../system/config/state.example.php', '../../system/config/state.php');\""
+		]
+	},
 	"require": {
 		"php": "^8.0",
 		"ext-curl": "*",
