--- a/collection/.gitignore
+++ b/collection/.gitignore
@@ -1,5 +1,5 @@
 # The following lines help ensure that only the `example` collection is included in the respository
 /*
 !/example
-/example/.lipupini/cache
+/example/.lipupini/.cache
 /example/.lipupini/inbox
