--- a/module/Lipupini/composer.json
+++ b/module/Lipupini/composer.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"post-install-cmd": [
-			"php -r \"copy('../../system/config/state.example.php', '../../system/config/state.php');\""
+			"php -r \"if (!file_exists('../../system/config/state.php')) copy('../../system/config/state.example.php', '../../system/config/state.php');\""
 		]
 	},
 	"require": {
