Update `playwright.yml` in case CI is implemented
Update `.editorconfig` and merge `.yml` section from Docker

Add to features in `README.md`

--- a/test/.github/workflows/playwright.yml
+++ b/test/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ demo, v6.x, v5.x ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ demo, v6.x, v5.x ]
 jobs:
   test:
     timeout-minutes: 60
