--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,7 @@ trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
 ij_continuation_indent_size = 4
+
+[*.yml]
+indent_style = space
+indent_size = 2
