Huge commit in preparation for `v6.x`
Many updates to internals

Multiple Docker patterns, adapting FrankenPHP including Early Hints

UI updates including fade-in on media item and loading indicator for images

--- a/system/deploy/docker/php-builtin/Dockerfile
+++ b/system/deploy/docker/php-builtin/Dockerfile
@@ -14,7 +14,7 @@ RUN docker-php-ext-install gd curl
 
 RUN adduser -D app
 
-COPY --chown=app:app ../.. /app/
+COPY --chown=app:app ../../../../.. /app/
 VOLUME /app/collection
 
 USER app
