--- a/system/deploy/docker/php-builtin/Dockerfile
+++ b/system/deploy/docker/php-builtin/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:8.2.17-alpine3.19
 
+# WIP: Please contribute
+
 USER root
 
 # composer: PHP dependency library
@@ -22,7 +24,7 @@ USER app
 RUN cd /app/module/Lipupini && composer install --no-interaction --no-dev --prefer-dist
 
 ENTRYPOINT ["tini", "--"]
-CMD ["ash", "-c", "cd /app/module/Lukinview/webroot && PHP_CLI_SERVER_WORKERS=2 php -S 0.0.0.0:4000 index.php"]
+CMD ["ash", "-c", "cd /app/module/Lukinview/webroot && PHP_CLI_SERVER_WORKERS=2 php -S 0.0.0.0:8080 index.php"]
 
 WORKDIR /app
-EXPOSE 4000
+EXPOSE 8080
