--- a/system/deploy/docker/php-builtin/docker-compose.yml
+++ b/system/deploy/docker/php-builtin/docker-compose.yml
@@ -3,8 +3,10 @@ services:
     build:
       context: ../../../..
       dockerfile: ./system/deploy/docker/php-builtin/Dockerfile
+      tags:
+        - "dcc2/php-builtin-lipupini:latest"
     ports:
-      - "4000:4000"
+      - "80:80" # HTTP
     restart: unless-stopped
     volumes:
       - ../../../collection:/app/collection:rw
